# django_djangoninja_alpinejs_crud

./: .env_sample  README.md  manage.py  pyproject.toml
django_djangoninja_alpinejs_crud/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
tracks/: __init__.py  api.py  apps.py  models.py  schema.py  views.py
tracks/migrations/: 0001_initial.py  0002_alter_track_id.py
tracks/templates/: base.html  index.html
